@@ -1,5 +1,3 @@
-from __future__ import unicode_literals
-
 __version__ = '4.5.4'
 
 default_app_config = 'axes.apps.AppConfig'
