@@ -1,5 +1,3 @@
-from __future__ import unicode_literals
-
 from django.core.checks import Error, Tags, register
 
 from django.conf import settings
