@@ -1,7 +1,3 @@
-# -*- coding: utf-8 -*-
-# Generated by Django 1.11.16 on 2018-10-24 22:38
-from __future__ import unicode_literals
-
 from django.db import migrations, models
 
 
