@@ -1,5 +1,3 @@
-from __future__ import unicode_literals
-
 import json
 
 from django.test import TestCase, override_settings
