@@ -23,6 +23,9 @@ Changes
 - Clean up code, tests, and documentation.
   [aleksihakli]
 
+- Drop support for Python 2.7 and Python 3.4.
+  [aleksihakli]
+
 
 4.5.4 (2019-01-15)
 ------------------
